--- a/src/listentogithub/package.json
+++ b/src/listentogithub/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.0.0",
     "octonode": "^0.6.12",
     "socket.io": "^1.2.1",
+    "socket.io-client": "^1.2.1",
     "static-favicon": "~1.0.0"
   }
 }
