--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "browserify": "^8.0.2",
     "d3": "^3.5.2",
+    "gulp": "^3.8.10",
     "howler": "^1.1.25",
     "jquery-browserify": "^1.8.1",
     "socket.io-client": "^1.2.1",
